// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sections-manage tool creating a new section should create a section and return result 1`] = `
"Created section: test-abc123def456-section • id=section-123
Next:
- Use tasks-add-multiple with sectionId=section-123 to add your first tasks
- Use tasks-list-for-container with type=section and id=section-123 to verify setup
- Use overview with projectId=6cfCcrrCFg2xP94Q to see project organization"
`;

exports[`sections-manage tool creating a new section should handle different section properties from API 1`] = `
"Created section: My Section Name • id=section-456
Next:
- Use tasks-add-multiple with sectionId=section-456 to add your first tasks
- Use tasks-list-for-container with type=section and id=section-456 to verify setup
- Use overview with projectId=project-789 to see project organization"
`;

exports[`sections-manage tool updating an existing section should update a section when id is provided 1`] = `
"Updated section: Updated Section Name • id=existing-section-123
Next:
- Use tasks-list-for-container with type=section and id=existing-section-123 to see existing tasks
- Use sections-search to see all sections in this project
- Consider updating task descriptions if section purpose changed"
`;

exports[`sections-manage tool updating an existing section should update section without requiring projectId 1`] = `
"Updated section: Section New Name • id=section-update-test
Next:
- Use tasks-list-for-container with type=section and id=section-update-test to see existing tasks
- Use sections-search to see all sections in this project
- Consider updating task descriptions if section purpose changed"
`;
